[gd_scene load_steps=13 format=3 uid="uid://fmgl7iwmoswq"]

[ext_resource type="Script" path="res://scenes/projectiles/napalm.gd" id="1_fh3fc"]
[ext_resource type="Script" path="res://components/damagecomponent.gd" id="2_x13jp"]
[ext_resource type="Texture2D" uid="uid://c5lhrhmp58evc" path="res://assets/fire_01.png" id="3_gxgne"]
[ext_resource type="AudioStream" uid="uid://ctwqbks8tplqw" path="res://assets/sounds/563138__nox_sound__foley_object_flame_thrower_loop_stereo.wav" id="4_5ucmx"]

[sub_resource type="SphereShape3D" id="SphereShape3D_k63ek"]
radius = 0.720919

[sub_resource type="Gradient" id="Gradient_e2iyj"]
offsets = PackedFloat32Array(0, 0.300792, 0.91029)
colors = PackedColorArray(1, 0.960938, 0, 1, 1, 0.609375, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_0lihs"]
gradient = SubResource("Gradient_e2iyj")

[sub_resource type="Curve" id="Curve_o7bss"]
_data = [Vector2(0, 0.220244), 0.0, 0.0, 0, 0, Vector2(0.749386, 1), -0.512974, -0.512974, 0, 0, Vector2(1, 0), -6.22569, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_kv1uc"]
curve = SubResource("Curve_o7bss")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_p0yrm"]
particle_flag_align_y = true
angle_min = 1.07288e-05
angle_max = 180.0
spread = 180.0
initial_velocity_max = 2.0
gravity = Vector3(0, 0, 0)
linear_accel_min = -2.23517e-06
linear_accel_max = 0.999998
scale_min = 0.0
scale_curve = SubResource("CurveTexture_kv1uc")
color = Color(1.5, 1.5, 1.5, 1)
color_ramp = SubResource("GradientTexture1D_0lihs")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_l3rke"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
albedo_texture = ExtResource("3_gxgne")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_ibb2e"]
material = SubResource("StandardMaterial3D_l3rke")

[node name="player_napalm" type="Node3D"]
script = ExtResource("1_fh3fc")
speed = 15
timeout = 1

[node name="Damage_Component" type="Area3D" parent="." groups=["fire"]]
script = ExtResource("2_x13jp")
damage = 3
exclusion_group = "player"
damage_group = "fire"
delete_host_on_dealing_damage = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Damage_Component"]
shape = SubResource("SphereShape3D_k63ek")

[node name="GPUParticles3D" type="GPUParticles3D" parent="Damage_Component"]
amount = 100
explosiveness = 1.0
fixed_fps = 90
local_coords = true
process_material = SubResource("ParticleProcessMaterial_p0yrm")
draw_pass_1 = SubResource("QuadMesh_ibb2e")

[node name="firesound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_5ucmx")
autoplay = true
bus = &"player_fx"
