[gd_scene load_steps=6 format=3 uid="uid://bkfiju1ayq1yc"]

[ext_resource type="Script" path="res://scenes/projectiles/bullet.gd" id="1_pcwkb"]
[ext_resource type="Script" path="res://components/damagecomponent.gd" id="2_suhfl"]
[ext_resource type="Material" uid="uid://c2qtipprj3n0p" path="res://assets/plasmabullet.tres" id="3_e6184"]
[ext_resource type="ArrayMesh" uid="uid://rjclm1ialgnp" path="res://assets/fireball.obj" id="4_q7qk5"]

[sub_resource type="SphereShape3D" id="SphereShape3D_k63ek"]
radius = 0.03

[node name="player_pellet" type="Node3D" groups=["pellet"]]
script = ExtResource("1_pcwkb")
speed = 17
gravity_decay = 0.05

[node name="PlayerBullet" type="Area3D" parent="." groups=["pellet", "player_damage"]]
script = ExtResource("2_suhfl")
damage = 15
exclusion_group = "player"
delete_host_on_dealing_damage = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerBullet"]
shape = SubResource("SphereShape3D_k63ek")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerBullet"]
transform = Transform3D(-0.05, 0, -1.50996e-08, 0, 0.05, 0, 7.54979e-09, 0, -0.1, 0, 0, 0)
material_override = ExtResource("3_e6184")
mesh = ExtResource("4_q7qk5")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(2, 1.6, 0, 1)
light_energy = 0.3
omni_range = 1.0

[connection signal="damageDelt" from="PlayerBullet" to="." method="die_on_body"]
